on the benefits of sorting

--- a/protva2018.tex
+++ b/protva2018.tex
@@ -52,6 +52,22 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 и синхронизации, которые приводят к созданию альтернативного формата~--- \verb|zrec| (сокр.~от compressed records).
 
 \section{О пользе сортировки}
+Главным просчетом в формате \verb|zchunk| является его общность: он сжимает какие-то куски, которые распаковываются
+во что угодно.  Формат \verb|zrec| вместо этого постулирует, что сжимаемые записи упорядочены каким-либо образом (напр.,
+естественным образом~--- по имени пакета, но возможна и группировка по \verb|src.rpm|).  Этот постулат имеет далеко
+идущие последствия.
+
+Во-первых, в отсортированном списке у записей возникает \textit{локальное сходство}, которое <<не улавливается>> словарем.
+Например, пакеты \verb|perl-*| имеют между собой сходство в части зависимостей и т.п.  Значит, группировка соседних
+записей при нарезке должна привести к значительному улучшению сжатия.  А библиотека тогда может реализовать
+процедуру сжатия с <<прозрачной>> группировкой.
+
+Во-вторых, сортировка меняет требования к сопоставлению кусков.  Это даже две разные математические задачи:
+1) чтобы уникально идентифицировать каждый кусок среди всех остальных, требуется 96-битный хеш (при числе кусков порядка $10^5$
+и вероятности коллизии порядка $10^{-18}$); 2) чтобы определить, изменился ли кусок, требуется 60 битов хеш-материала
+(т.\,к.~$2^{-60}\approx10^{-18}$).  Поэтому можно считать, что когда куски <<расставлены по местам>>, то для идентификации
+куска в <<локальной окрестности>> достаточно 64-битного хеша.
+
 \section{Группировка записей}
 \section{Хеширование и расстановка}
 \section{О надежности конструкции}
