--- a/protva2018.tex
+++ b/protva2018.tex
@@ -69,6 +69,40 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 куска в <<локальной окрестности>> достаточно 64-битного хеша.
 
 \section{Группировка записей}
+Группировка записей может заметно, хотя и не радикально, улучшить сжатие.  Возьмем файл \verb|srclist.xz| (1.86 Мб)~--- в разжатом
+виде 10 Мб.  <<Солидное>> сжатие \verb|zstd -19| дает 1.97 Мб.  Если сжимать каждую запись по отдельности, получается 5.8 Мб~---
+мало избыточности!  Радикальное улучшение дает сжатие записей со словарем~--- 2.44 Мб (словарь 512 Кб, в сжатом виде 177 Кб).
+Если теперь еще группировать записи парами, получается 2.26 Мб, по три~--- 2.21 Мб, по четыре~--- 2.18 Мб и далее очень медленно.
+В общем, группировка по 2-3 записи улучшает сжатие до 10\%.
+
+Записи однако нельзя группировать в ровных количествах, это приведет к \textit{сдвигу границ} и сделает невозможным синхронизацию.
+Так, если из потока записей, сгруппированных парами: \texttt{AB CD EF...} будет удалена запись \verb|B|, то границы пар сдвинутся:
+\texttt{AC DE F...} и все куски перестанут совпадать.  Классический подход к решению этой проблемы состоит в том, что нужно
+нарезать куски переменной длины псевдослучайным образом, основываясь на данных внутри кусков (content-defined chunking).
+А именно, данные сканируются скользящим окном и нарезаются, когда контрольная сумма в окне принимает определенное значение.
+Упрощенная реализация такого подхода известна как rsyncable gzip.  Об оптимальной нарезке нарезке см.~статью 2005 г.~\cite{hp}
+и свежую работу \cite{xia}.
+
+Наша идея \textit{ультракороткой оптимальной нарезки} состоит в следующем: записи можно сравнивать по их хеш-коду.
+Тогда если напр.~$\underline{A<B<C}>\underline{D<E}$, то упорядоченная подпоследовательность и образует группу,
+а нарушение порядка дает разрез.  Нарушение порядка можно также вынужденно допустить в первых двух элементах группы.
+Это приводит к следующей \textbf{Стратегии}: 1)~Поместить в очередь $A$, $B$ и $C$.  Если $B>C$, отрезать $AB$ (и тогда $C$
+становится новым $A$). 2)~Иначе добавить в очередь $D$.  Если $C>D$, отрезать $ABC$.  3)~Иначе отрезать $ABCD$.
+
+Отметим, что хотя на шагах 1) и 2) сравнение одно и то же, вероятность его разная: $\Pr(B<C)=1/2$, а $\Pr(C<D)<1/2$.
+И поскольку условие одно и то же, то для преодоления рассинхронизации дается более одной возможности <<зацепиться
+за нужное место>>, и в то же время рассинхронизация быстро пресекается.
+
+Отметим также важную \textit{практическую модификацию} процедуры нарезки: для использования в качестве $A, B\ldots$
+желательно хешировать не всю запись, а лишь имя пакета (или имя \verb|src.rpm| пакета без версии при группировке по \verb|src.rpm|).
+Тогда изменение версии у пакета не приводит к изменению нарезки: изменение оказывается полностью локализованным внутри куска;
+к рассинхронизации может привести только удаление и добавление новых пакетов.
+
+Мы взяли файл \verb|srclist.xz| от 1 июня и 1 июля 2018 г.  Без группировки записей для регенерации нового файла
+недостает 923 кусков общим объемом 271 Кб, а с описанной группировкой - 809 кусков объемом 568 Кб.  При этом группировка
+также уменьшает размер индекса примерно с 80 до 30 Кб, однако в данном случае увеличившийся объем кусков в несколько
+раз перекрывает уменьшение индекса.  Видно, что при нерегулярных обновлениях группировка оказывается невыгодной.
+
 \section{Хеширование и расстановка}
 \section{О надежности конструкции}
 
@@ -81,6 +115,14 @@ Alexey Tourbin. \verb|zpkglist|~--- Compressed file format\\
 \bibitem{dieter}
 Jonathan Dieter. What is \verb|zchunk|?\\
 \url{https://www.jdieter.net/posts/2018/05/31/what-is-zchunk/}
+
+\bibitem{hp}
+Kave Eshghi, Hsiu Khuern Tang (2005).
+A Framework for Analyzing and Improving Content-Based Chunking Algorithms
+
+\bibitem{xia}
+Wen Xia et al. (2016).
+FastCDC: a Fast and Efficient Content-Defined Chunking Approach for Data Deduplication
 
 \end{thebibliography}
 
