--- a/protva2018.tex
+++ b/protva2018.tex
@@ -53,14 +53,14 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 
 \section{О пользе сортировки}
 Главным просчетом в формате \verb|zchunk| является его общность: он сжимает какие-то куски, которые распаковываются
-во что угодно.  Формат \verb|zrec| вместо этого постулирует, что сжимаемые записи упорядочены каким-либо образом (напр.,
-естественным образом~--- по имени пакета, но возможна и группировка по \verb|src.rpm|).  Этот постулат имеет далеко
-идущие последствия.
+во что угодно.  Формат \verb|zrec| вместо этого постулирует, что сжимаемые записи \textit{упорядочены} каким-либо образом
+(напр., естественным образом~--- по имени пакета, но возможна и группировка по \verb|src.rpm|).
+Этот постулат имеет далеко идущие последствия.
 
 Во-первых, в отсортированном списке у записей возникает \textit{локальное сходство}, которое <<не улавливается>> словарем.
-Например, пакеты \verb|perl-*| имеют между собой сходство в части зависимостей и т.п.  Значит, группировка соседних
+Например, пакеты \verb|perl-*| имеют между собой сходство в части зависимостей и т.\,п.  Значит, группировка соседних
 записей при нарезке должна привести к значительному улучшению сжатия.  А библиотека тогда может реализовать
-процедуру сжатия с <<прозрачной>> группировкой.
+процедуру сжатия с автоматической группировкой.
 
 Во-вторых, сортировка меняет требования к сопоставлению кусков.  Это даже две разные математические задачи:
 1) чтобы уникально идентифицировать каждый кусок среди всех остальных, требуется 96-битный хеш (при числе кусков порядка $10^5$
@@ -73,14 +73,14 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 виде 10 Мб.  <<Солидное>> сжатие \verb|zstd -19| дает 1.97 Мб.  Если сжимать каждую запись по отдельности, получается 5.8 Мб~---
 мало избыточности!  Радикальное улучшение дает сжатие записей со словарем~--- 2.44 Мб (словарь 512 Кб, в сжатом виде 177 Кб).
 Если теперь еще группировать записи парами, получается 2.26 Мб, по три~--- 2.21 Мб, по четыре~--- 2.18 Мб и далее очень медленно.
-В общем, группировка по 2-3 записи улучшает сжатие до 10\%.
+В общем, группировка по 2-3 записи улучшает сжатие до 10\%, а также уменьшает в 2-3 раза размер индекса.
 
 Записи однако нельзя группировать в ровных количествах, это приведет к \textit{сдвигу границ} и сделает невозможным синхронизацию.
 Так, если из потока записей, сгруппированных парами: \texttt{AB CD EF...} будет удалена запись \verb|B|, то границы пар сдвинутся:
 \texttt{AC DE F...} и все куски перестанут совпадать.  Классический подход к решению этой проблемы состоит в том, что нужно
 нарезать куски переменной длины псевдослучайным образом, основываясь на данных внутри кусков (content-defined chunking).
 А именно, данные сканируются скользящим окном и нарезаются, когда контрольная сумма в окне принимает определенное значение.
-Упрощенная реализация такого подхода известна как rsyncable gzip.  Об оптимальной нарезке нарезке см.~статью 2005 г.~\cite{hp}
+Упрощенная реализация такого подхода известна как rsyncable gzip.  Об оптимальной нарезке см.~статью 2005 г.~\cite{hp}
 и свежую работу \cite{xia}.
 
 Наша идея \textit{ультракороткой оптимальной нарезки} состоит в следующем: записи можно сравнивать по их хеш-коду.
@@ -99,7 +99,7 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 к рассинхронизации может привести только удаление и добавление новых пакетов.
 
 Мы взяли файл \verb|srclist.xz| от 1 июня и 1 июля 2018 г.  Без группировки записей для регенерации нового файла
-недостает 923 кусков общим объемом 271 Кб, а с описанной группировкой - 809 кусков объемом 568 Кб.  При этом группировка
+недостает 923 куска общим объемом 271 Кб, а с описанной группировкой~--- 809 кусков объемом 568 Кб.  При этом группировка
 также уменьшает размер индекса примерно с 80 до 30 Кб, однако в данном случае увеличившийся объем кусков в несколько
 раз перекрывает уменьшение индекса.  Видно, что при нерегулярных обновлениях группировка оказывается невыгодной.
 
