hashing and alignment

--- a/protva2018.tex
+++ b/protva2018.tex
@@ -104,6 +104,38 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 раз перекрывает уменьшение индекса.  Видно, что при нерегулярных обновлениях группировка оказывается невыгодной.
 
 \section{Хеширование и расстановка}
+При любом изменения репозитория индекс бует скачиваться полностью, что может составлять значительную часть скачаного.
+Поэтому представляет интерес дальнейшее уменьшение объема хеш-материала внутри индекса.
+
+Выделим подзадачу: пусть каждый кусок наделяется 32-битным хешем; нужно установить соотвествие между кусками в старом
+и новом файле.  Ясно, что соответствие определяется совпадением хеша, но при этом совпадения, нарушающие <<общий порядок>>,
+считаются коллизиями и отсеиваются.
+
+В общем виде эта задача известа как Longest common subsequence problem, и одним из ее решений является алгоритм Майерса
+\cite{myers}, используемый в \verb|diff(1)|.  Однако алгоритм Майерса выполняется, вообще говоря, квадратичное время,
+как и все остальные решения этой задаче в наиболее общем виде или в худшем случае.  Несколько точнее, сложность алгоритма Майерса~---
+$O(nd)$, где $n$~--- общее число элементов в двух последовательностях, а $d$~--- число отличающихся элементов.
+Увы, на больших файлах \verb|diff(1)| хорошо работает, только если изменения в них оказываются небольшими.
+В нашем же случае при нерегулярных обновлениях число отличающихся кусков может быть большим.
+Однако существует другой алгоритм~--- алгоритм Ханта-Шиманского со сложностью $O((r+n)\log n)$, где $r$~--- общее число
+всевозможных совпадений в двух последователностях.  Этот алгоритм деградирует, когда число неоднозначных совпадений велико
+(например, из-за малой мощности алфавита, или когда в тесктовых файлах много одинаковых строк).  Но в нашем случае при общем
+количестве кусков порядка $2^{16}$ неодозначными совпадениями (коллизиями 32-битного хеша) можно пренебречь, и задача расстановки
+решается за $O(n\log n)$.  Позже были открыты другие алгоритмы с похожей асимптотикой, которые используются в биоинформатике
+\cite[с.\,291]{seq} (в биоинформатике задача расстановки называется global alignment).  См.~тж. обзоры \cite{survey,symposium}.
+
+Естественно, 32-битного хеша маловато для надежного сопоставления.  Поэтому формат вводит хеширование второго уровня:
+пусть $h(A)$ и $h(B)$~--- хеши идущих подряд кусков, тогда в дополнение к ним вычисляется $H(A+B)$~--- 32-битный <<проверочный>>
+хеш.  Важно, что функции $h$ и $H$ отличаются, т.\,е.~$H$ предоставляет \textit{дополнительную} информацию о каждом куске.
+Тогда каждый кусок оказывается наделенным 64-битных хешем (поскольку с точки зрения каждого куска другой кусок можно считать
+параметром).  А составная конструкция содержит 96 битов хеш-материала, что уже достаточно для уникальной идентификации.
+Проверочный хеш используется на второй стадии синхронизации: если $h(A)$ и $h(B)$ совпадают, а $H(A+B)$ не совпадает, значит,
+куски $A$ и $B$ надо скачать повторно.
+
+Теперь остается только применить тот же алгоритм группировки кусков, который применяется для группировки записей:
+для наделения кусков составным хешем их нужно нарезать по 2-4 штуки.  Совпадение составных кусков разбивает задачу
+расстановки на мелкие подзадачи.
+
 \section{О надежности конструкции}
 
 \begin{thebibliography}{9}
@@ -123,6 +155,19 @@ A Framework for Analyzing and Improving Content-Based Chunking Algorithms
 \bibitem{xia}
 Wen Xia et al. (2016).
 FastCDC: a Fast and Efficient Content-Defined Chunking Approach for Data Deduplication
+
+\bibitem{myers}
+Eugene W. Myers (1986).  An O(ND) Difference Algorithm and Its Variations
+
+\bibitem{seq}
+Dan Gusfield (1997).  Algorithms on Strings, Trees, and Sequences:
+Computer Science and Computational Biology
+
+\bibitem{survey}
+L. Bergroth et al. (2000).  A Survey of Longest Common Subsequence Algorithms
+
+\bibitem{symposium}
+Mike Paterson, Vlado Dancik (1994).  Longest Common Subsequences
 
 \end{thebibliography}
 
