--- a/protva2018.tex
+++ b/protva2018.tex
@@ -19,7 +19,7 @@
 \end{abstract}
 
 \section{Введение}
-Перед обновлением пакетов из репозитория скачивается большой файл с \textit{записями пакетов} (records);
+Перед обновлением из репозитория скачивается большой файл с \textit{записями пакетов} (records);
 в \verb|apt-rpm| это файлы \verb|pkglist.xz| и \verb|srclist.xz|, содержащие урезанные
 rpm-заголовки (в \verb|repomd|-репозиториях записями можно считать сегменты XML-файла).
 Файл \verb|pkglist.xz| хорошо сжат, но распаковка его занимает несколько секунд, и далее
@@ -32,7 +32,7 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 для сжатия записей после скачивания \cite{zpkglist}.
 За основу была взята библиотека сжатия \verb|LZ4|; для нее была адаптирована техника сжатия со словарем,
 реализованная в библиотеке \verb|zstd|.  Перед сжатием записи группировались по 4 штуки, что значительно
-улучшало коэффициент сжатия, однако произвольный доступ требовал распаковки группы из четырех записей.
+улучшало коэффициент сжатия, однако произвольный доступ уже требовал распаковки группы из четырех записей.
 
 В мае 2018 г.~Джонатан Дайетер (Jonathan Dieter) анонсировал похожий проект \verb|zchunk| \cite{dieter}
 (формат файла и библиотека сжатия).  Поддержка \verb|zchunk| добавлена в \verb|dnf|, планируется к использованию
@@ -42,7 +42,7 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 не требует распаковки на клиенте).
 
 Файл в формате \verb|zchunk| можно понимать просто как сжатый поток байтов.  При сжатии поток нарезается на куски (chunking)
-и каждый кусок сжимается хотя и отдельно, но \textit{со словарем}, отдельно хранящемся в файле (что значительно улучшает
+и каждый кусок сжимается хотя и отдельно, но \textit{со словарем}, хранящимся в том же файле (что значительно улучшает
 коэффициент сжатия).  Естественно, при сжатии записей нарезка идет по границам записей, но в одном куске может содержаться
 и несколько записей.  В начале же файла хранится \textit{индекс} кусков: их размеры и хеш-суммы.  Наличие индекса делает
 возможным \textit{синхронизацию}: клиент сначала скачивает индекс и потом~--- через HTTP range requests~--- недостающие
@@ -73,7 +73,7 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 виде 10 Мб.  <<Солидное>> сжатие \verb|zstd -19| дает 1.97 Мб.  Если сжимать каждую запись по отдельности, получается 5.8 Мб~---
 мало избыточности!  Радикальное улучшение дает сжатие записей со словарем~--- 2.44 Мб (словарь 512 Кб, в сжатом виде 177 Кб).
 Если теперь еще группировать записи парами, получается 2.26 Мб, по три~--- 2.21 Мб, по четыре~--- 2.18 Мб и далее очень медленно.
-В общем, группировка по 2-3 записи улучшает сжатие до 10\%, а также уменьшает в 2-3 раза размер индекса.
+В общем, группировка по 2-3 записи улучшает сжатие на 8-10\%, а также уменьшает в 2-3 раза размер индекса.
 
 Записи однако нельзя группировать в ровных количествах, это приведет к \textit{сдвигу границ} и сделает невозможным синхронизацию.
 Так, если из потока записей, сгруппированных парами: \texttt{AB CD EF...} будет удалена запись \verb|B|, то границы пар сдвинутся:
@@ -104,30 +104,30 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 раз перекрывает уменьшение индекса.  Видно, что при нерегулярных обновлениях группировка оказывается невыгодной.
 
 \section{Хеширование и расстановка}
-При любом изменения репозитория индекс бует скачиваться полностью, что может составлять значительную часть скачаного.
+При любом изменения репозитория индекс бует скачиваться полностью, что может составлять значительную часть скачанного.
 Поэтому представляет интерес дальнейшее уменьшение объема хеш-материала внутри индекса.
 
 Выделим подзадачу: пусть каждый кусок наделяется 32-битным хешем; нужно установить соотвествие между кусками в старом
 и новом файле.  Ясно, что соответствие определяется совпадением хеша, но при этом совпадения, нарушающие <<общий порядок>>,
 считаются коллизиями и отсеиваются.
 
-В общем виде эта задача известа как Longest common subsequence problem, и одним из ее решений является алгоритм Майерса
+В общем виде эта задача известна как Longest common subsequence problem, и одним из ее решений является алгоритм Майерса
 \cite{myers}, используемый в \verb|diff(1)|.  Однако алгоритм Майерса выполняется, вообще говоря, квадратичное время,
 как и все остальные решения этой задаче в наиболее общем виде или в худшем случае.  Несколько точнее, сложность алгоритма Майерса~---
 $O(nd)$, где $n$~--- общее число элементов в двух последовательностях, а $d$~--- число отличающихся элементов.
 Увы, на больших файлах \verb|diff(1)| хорошо работает, только если изменения в них оказываются небольшими.
 В нашем же случае при нерегулярных обновлениях число отличающихся кусков может быть большим.
 Однако существует другой алгоритм~--- алгоритм Ханта-Шиманского со сложностью $O((r+n)\log n)$, где $r$~--- общее число
-всевозможных совпадений в двух последователностях.  Этот алгоритм деградирует, когда число неоднозначных совпадений велико
-(например, из-за малой мощности алфавита, или когда в тесктовых файлах много одинаковых строк).  Но в нашем случае при общем
-количестве кусков порядка $2^{16}$ неодозначными совпадениями (коллизиями 32-битного хеша) можно пренебречь, и задача расстановки
+всевозможных совпадений в двух последовательностях.  Этот алгоритм деградирует, когда число неоднозначных совпадений велико
+(например, из-за малой мощности алфавита, или когда в текстовых файлах много одинаковых строк).  Но в нашем случае при общем
+количестве кусков порядка $2^{16}$ неоднозначными совпадениями (коллизиями 32-битного хеша) можно пренебречь, и задача расстановки
 решается за $O(n\log n)$.  Позже были открыты другие алгоритмы с похожей асимптотикой, которые используются в биоинформатике
 \cite[с.\,291]{seq} (в биоинформатике задача расстановки называется global alignment).  См.~тж. обзоры \cite{survey,symposium}.
 
 Естественно, 32-битного хеша маловато для надежного сопоставления.  Поэтому формат вводит хеширование второго уровня:
 пусть $h(A)$ и $h(B)$~--- хеши идущих подряд кусков, тогда в дополнение к ним вычисляется $H(A+B)$~--- 32-битный <<проверочный>>
 хеш.  Важно, что функции $h$ и $H$ отличаются, т.\,е.~$H$ предоставляет \textit{дополнительную} информацию о каждом куске.
-Тогда каждый кусок оказывается наделенным 64-битных хешем (поскольку с точки зрения каждого куска другой кусок можно считать
+Тогда каждый кусок оказывается наделенным 64-битным хешем (поскольку с точки зрения каждого куска другой кусок можно считать
 параметром).  А составная конструкция содержит 96 битов хеш-материала, что уже достаточно для уникальной идентификации.
 Проверочный хеш используется на второй стадии синхронизации: если $h(A)$ и $h(B)$ совпадают, а $H(A+B)$ не совпадает, значит,
 куски $A$ и $B$ надо скачать повторно.
