--- a/protva2018.tex
+++ b/protva2018.tex
@@ -15,7 +15,10 @@
 \maketitle
 
 \begin{abstract}
-
+Новый формат сжатия записей обеспечивает высокий коэффициент сжатия и в то же время
+сохраняет возможность произвольного доступа к записям.
+Для этого поток записей разбивается на куски (chunking).
+Поддерживается синхронизация / частичное скачивание через HTTP range requests.
 \end{abstract}
 
 \section{Введение}
