--- a/protva2018.tex
+++ b/protva2018.tex
@@ -107,10 +107,10 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 раз перекрывает уменьшение индекса.  Видно, что при нерегулярных обновлениях группировка оказывается невыгодной.
 
 \section{Хеширование и расстановка}
-При любом изменения репозитория индекс бует скачиваться полностью, что может составлять значительную часть скачанного.
+При любом изменения репозитория индекс будет скачиваться полностью, что может составлять значительную часть скачанного.
 Поэтому представляет интерес дальнейшее уменьшение объема хеш-материала внутри индекса.
 
-Выделим подзадачу: пусть каждый кусок наделяется 32-битным хешем; нужно установить соотвествие между кусками в старом
+Выделим подзадачу: пусть каждый кусок наделяется 32-битным хешем; нужно установить соответствие между кусками в старом
 и новом файле.  Ясно, что соответствие определяется совпадением хеша, но при этом совпадения, нарушающие <<общий порядок>>,
 считаются коллизиями и отсеиваются.
 
