caught a typo / bad genitive case

--- a/protva2018.tex
+++ b/protva2018.tex
@@ -116,7 +116,7 @@ rpm-заголовки (в \verb|repomd|-репозиториях записям
 
 В общем виде эта задача известна как Longest common subsequence problem, и одним из ее решений является алгоритм Майерса
 \cite{myers}, используемый в \verb|diff(1)|.  Однако алгоритм Майерса выполняется, вообще говоря, квадратичное время,
-как и все остальные решения этой задаче в наиболее общем виде или в худшем случае.  Несколько точнее, сложность алгоритма Майерса~---
+как и все остальные решения этой задачи в наиболее общем виде или в худшем случае.  Несколько точнее, сложность алгоритма Майерса~---
 $O(nd)$, где $n$~--- общее число элементов в двух последовательностях, а $d$~--- число отличающихся элементов.
 Увы, на больших файлах \verb|diff(1)| хорошо работает, только если изменения в них оказываются небольшими.
 В нашем же случае при нерегулярных обновлениях число отличающихся кусков может быть большим.
